--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "npm run typecheck && npm run eslint ",
     "test-watch": "jest --watch",
     "test": "jest --coverage",
-    "test:ci": "jest --ci --coverage",
+    "test-ci": "jest --ci --coverage",
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "repository": {
