--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "A set of utilities enhancing the development of react applications.",
   "main": "./dist/index.js",
+  "files": [
+    "src",
+    "dist"
+  ],
   "scripts": {
     "build": "rimraf ./dist/* && tsc -p tsconfig.json",
     "eslint": "eslint -c .eslintrc.js --ext .js,.ts,.tsx && tsc --noEmit --project tsconfig.json",
     "lint:test:build": "npm run lint:test && npm run build",
     "lint:test": "npm run lint && npm run test",
     "lint": "npm run typecheck && npm run eslint ",
+    "release": "np --no-yarn && git push https://github.com/terrestris/react-util.git master",
     "test-watch": "jest --watch",
     "test": "jest --coverage",
     "test-ci": "jest --ci --coverage",
@@ -42,10 +47,10 @@
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@terrestris/eslint-config-typescript": "1.0.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.2",
-    "@terrestris/eslint-config-typescript": "1.0.0",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
@@ -55,9 +60,10 @@
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.12.0",
     "eslint": "^7.25.0",
-    "jest-fetch-mock": "^3.0.3",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "less": "^4.1.1",
+    "np": "^7.5.0",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.6",
