--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "@terrestris/base-util": "^1.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "ol": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -66,10 +67,10 @@
     "jest-fetch-mock": "^3.0.3",
     "less": "^4.1.1",
     "np": "^7.5.0",
-    "regenerator-runtime": "^0.13.7",
-    "rimraf": "^3.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.1.0",
+    "regenerator-runtime": "^0.13.7",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
