--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "release": "np --no-yarn && git push https://github.com/terrestris/react-util.git main",
     "test-ci": "jest --ci --coverage",
     "test-watch": "jest --watch",
-    "test": "jest --coverage",
+    "test": "jest --maxWorkers=4 --coverage",
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "repository": {
@@ -51,27 +51,39 @@
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "@terrestris/eslint-config-typescript": "^3.0.0",
+    "@terrestris/ol-util": "^12.0.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^13.1.1",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^29.5.4",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.10.2",
     "@typescript-eslint/parser": "^5.21.0",
     "babel-plugin-import": "^1.13.3",
+    "canvas": "^2.11.2",
     "core-js": "^3.12.0",
+    "enzyme": "^3.11.0",
     "eslint": "^8.14.0",
-    "jest": "^26.6.3",
+    "jest": "^29.6.4",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^29.6.4",
     "jest-fetch-mock": "^3.0.3",
+    "jspdf": "^2.5.1",
     "less": "^4.1.1",
+    "moment": "^2.29.4",
     "np": "^7.5.0",
+    "ol": "^7.5.2",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.1.0",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "ts-jest": "^29.1.1",
+    "typescript": "^4.2.4",
+    "use-resize-observer": "^9.1.0",
+    "whatwg-fetch": "^3.6.18"
   }
 }
