--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "homepage": "https://github.com/terrestris/react-util#readme",
   "peerDependencies": {
     "react": ">=17",
-    "react-dom": ">=17"
+    "react-dom": ">=17",
+    "ol": ">=7"
   },
   "dependencies": {
     "@terrestris/base-util": "^1.0.1",
-    "lodash": "^4.17.21",
-    "ol": "^8.0.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
