chore: homogenize / sort imports using simple-sort-plugin

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   ],
   "scripts": {
     "build": "rimraf ./dist/* && tsc -p tsconfig.json",
-    "eslint": "eslint -c .eslintrc.js --ext .js,.ts,.tsx && tsc --noEmit --project tsconfig.json",
-    "lint:test:build": "npm run lint:test && npm run build",
-    "lint:test": "npm run lint && npm run test",
-    "lint": "npm run typecheck && npm run eslint ",
+    "lint": "eslint -c .eslintrc --ext .tsx,.ts src/",
+    "lint:fix": "eslint -c .eslintrc --ext .tsx,.ts src/ --fix",
     "prepublishOnly": "npm run lint:test:build",
     "release": "np --no-yarn && git push https://github.com/terrestris/react-util.git main",
     "test-ci": "jest --ci --coverage",
@@ -50,6 +48,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "@babel/preset-typescript": "^7.13.0",
     "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "@terrestris/eslint-config-typescript": "^3.0.0",
