--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "homepage": "https://github.com/terrestris/react-util#readme",
   "peerDependencies": {
+    "ol": ">=7",
     "react": ">=17",
-    "react-dom": ">=17",
-    "ol": ">=7"
+    "react-dom": ">=17"
   },
   "dependencies": {
     "@terrestris/base-util": "^1.0.1",
@@ -48,7 +48,6 @@
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
     "@babel/preset-typescript": "^7.13.0",
     "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "@terrestris/eslint-config-typescript": "^3.0.0",
@@ -66,6 +65,7 @@
     "core-js": "^3.12.0",
     "enzyme": "^3.11.0",
     "eslint": "^8.14.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.6.4",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.6.4",
@@ -75,6 +75,7 @@
     "moment": "^2.29.4",
     "np": "^7.5.0",
     "ol": "^7.5.2",
+    "ol-mapbox-style": "^11.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.1.0",
