--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "rimraf ./dist/* && tsc -p tsconfig.json",
     "lint": "eslint -c .eslintrc --ext .tsx,.ts src/",
     "lint:fix": "eslint -c .eslintrc --ext .tsx,.ts src/ --fix",
-    "prepublishOnly": "npm run lint:test:build",
+    "prepublishOnly": "npm run lint",
     "release": "np --no-yarn && git push https://github.com/terrestris/react-util.git main",
     "test-ci": "jest --ci --coverage",
     "test-watch": "jest --watch",
