--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean": "rimraf ./build/* ./coverage/* ./dist/*",
     "lint": "eslint -c .eslintrc --ext .tsx,.ts src/",
     "lint:fix": "eslint -c .eslintrc --ext .tsx,.ts src/ --fix",
-    "prepublishOnly": "npm run lint",
-    "release": "np --no-yarn && git push https://github.com/terrestris/react-util.git main",
+    "release": "release-it",
+    "release-manual": "release-it --plugins.@release-it/conventional-changelog.ignoreRecommendedBump=true",
     "test": "jest --maxWorkers=4 --coverage",
     "test-ci": "jest --ci --coverage",
     "test-watch": "jest --watch",
@@ -42,8 +42,10 @@
     "react-dom": ">=17"
   },
   "dependencies": {
+    "@release-it/conventional-changelog": "^7.0.1",
     "@terrestris/base-util": "^1.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "release-it": "^16.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -78,7 +80,6 @@
     "jspdf": "^2.5.1",
     "less": "^4.1.1",
     "moment": "^2.29.4",
-    "np": "^7.5.0",
     "ol": "^7.5.2",
     "ol-mapbox-style": "^11.0.3",
     "prop-types": "^15.8.1",
