--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
     "react-dom": ">=17"
   },
   "dependencies": {
-    "@release-it/conventional-changelog": "^7.0.1",
     "@terrestris/base-util": "^1.0.1",
-    "lodash": "^4.17.21",
-    "release-it": "^16.1.5"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -56,6 +54,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@cfaester/enzyme-adapter-react-18": "^0.7.1",
+    "@release-it/conventional-changelog": "^7.0.1",
     "@terrestris/eslint-config-typescript": "^3.0.0",
     "@terrestris/ol-util": "^12.0.1",
     "@testing-library/jest-dom": "^5.12.0",
@@ -85,6 +84,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.1.0",
+    "release-it": "^16.1.5",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
