--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrestris/react-util",
-  "version": "2.2.0-beta.2",
+  "version": "3.0.0",
   "description": "A set of utilities enhancing the development of react applications.",
   "main": "./dist/index.js",
   "files": [
