--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/parser": "^5.21.0",
     "babel-plugin-import": "^1.13.3",
     "canvas": "^2.11.2",
+    "copyfiles": "^2.4.1",
     "core-js": "^3.12.0",
     "enzyme": "^3.11.0",
     "eslint": "^8.14.0",
