--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:dist && npm run build:declaration",
+    "build": "npm run clean && npm run build:dist && npm run build:declaration && copyfiles -u 1 src/**/*.png dist/",
     "build:declaration": "tsc --emitDeclarationOnly",
     "build:dist": "tsc -p tsconfig.json",
     "clean": "rimraf ./build/* ./coverage/* ./dist/*",
