build: remove unneeded jest setups and make ts recognize jest-dom

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,12 @@
     "noUnusedLocals": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "rootDir": "./src",
     "sourceMap": true,
     "strictNullChecks": false,
     "target": "ES2015"
   },
   "include": [
-    "src"
+    "src",
+    "test"
   ]
 }
