--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "watch:buildto": "node watchBuild.js"
   },
   "dependencies": {
+    "@camptocamp/inkmap": "^1.4.0",
     "@terrestris/base-util": "^1.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1"
