--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrestris/react-util",
-  "version": "4.0.0-beta.4",
+  "version": "4.0.0",
   "description": "A set of utilities enhancing the development of react applications.",
   "keywords": [
     "react",
