--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
     "@release-it/conventional-changelog": "^8.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@terrestris/eslint-config-typescript": "^5.0.0",
     "@terrestris/eslint-config-typescript-react": "^2.0.0",
     "@terrestris/ol-util": "^19.0.0",
@@ -77,6 +79,7 @@
     "react-dom": "^18.3.1",
     "release-it": "^17.3.0",
     "rimraf": "^5.0.7",
+    "semantic-release": "^23.1.1",
     "ts-jest": "^29.1.3",
     "typescript": "^5.4.5",
     "watch": "^1.0.2"
