--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "esModuleInterop": true,
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
     "declaration": true,
+    "rootDir": "./src/",
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "lib": [
@@ -13,8 +13,8 @@
       "dom.iterable",
       "esnext"
     ],
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "ES2022",
+    "moduleResolution": "Bundler",
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -23,10 +23,9 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "strictNullChecks": false,
-    "target": "ES2015"
+    "target": "ES2022"
   },
   "include": [
-    "src",
-    "test"
+    "src"
   ]
 }
