--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@terrestris/ol-util": "^19.0.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@types/geojson": "^7946.0.14",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
