--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^7.10.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
