--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-typescript": "^7.24.6",
     "@release-it/conventional-changelog": "^8.0.1",
     "@terrestris/eslint-config-typescript": "^5.0.0",
+    "@terrestris/eslint-config-typescript-react": "^2.0.0",
     "@terrestris/ol-util": "^19.0.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
