--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "npm run clean:dist && npm run build:dist && npm run build:declaration && copyfiles -u 1 src/**/*.png src/**/*.svg src/**/*.less dist/",
     "build:declaration": "tsc --emitDeclarationOnly",
     "build:dist": "tsc -p tsconfig.json",
+    "check": "npm run typecheck && npm run lint && npm test",
     "clean": "npm run clean:dist && npm run clean:coverage",
     "clean:dist": "rimraf ./dist/*",
     "clean:coverage": "rimraf ./coverage/*",
@@ -52,7 +53,7 @@
     "@semantic-release/git": "^10.0.1",
     "@terrestris/eslint-config-typescript": "^5.0.0",
     "@terrestris/eslint-config-typescript-react": "^2.0.0",
-    "@terrestris/ol-util": "^19.0.0",
+    "@terrestris/ol-util": "^20.0.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@types/geojson": "^7946.0.14",
@@ -69,8 +70,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
-    "jspdf": "^2.5.1",
-    "ol": "^9.2.3",
+    "jspdf": "^2.5.2",
+    "ol": "^10.1.0",
     "ol-mapbox-style": "^12.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -81,8 +82,8 @@
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "@terrestris/ol-util": ">=18",
-    "ol": ">=9",
+    "@terrestris/ol-util": ">=20",
+    "ol": ">=10",
     "ol-mapbox-style": ">=12",
     "react": ">=18",
     "react-dom": ">=18"
