--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "clean": "npm run clean:dist && npm run clean:coverage",
     "clean:dist": "rimraf ./dist/*",
     "clean:coverage": "rimraf ./coverage/*",
-    "lint": "eslint -c .eslintrc --ext .tsx,.ts src/",
-    "lint:fix": "eslint -c .eslintrc --ext .tsx,.ts src/ --fix",
+    "lint": "npm run clean:dist && eslint -c eslint.config.mjs",
+    "lint:fix": "npm run lint -- --fix",
+    "pretest": "npm run clean:dist && npm run typecheck && npm run lint",
     "test": "npm run clean:coverage && jest --maxWorkers=4 --coverage",
     "test-ci": "npm run clean:coverage && jest --ci --coverage -c jest.config.cjs",
     "test-watch": "jest --watch -c jest.config.cjs",
@@ -49,24 +50,29 @@
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@terrestris/eslint-config-typescript": "^5.0.0",
-    "@terrestris/eslint-config-typescript-react": "^2.0.0",
-    "@terrestris/ol-util": "^20.0.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
+    "@terrestris/eslint-config-typescript": "^7.0.0",
+    "@terrestris/eslint-config-typescript-react": "^3.0.0",
+    "@terrestris/ol-util": "^21.0.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@types/geojson": "^7946.0.14",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
+    "eslint-plugin-import": "^2.31.0",
     "fs-extra": "^11.2.0",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
@@ -78,11 +84,12 @@
     "rimraf": "^6.0.1",
     "semantic-release": "^24.0.0",
     "ts-jest": "^29.1.3",
-    "typescript": "^5.4.5",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "@terrestris/ol-util": ">=20",
+    "@terrestris/ol-util": ">=21",
     "ol": ">=10",
     "ol-mapbox-style": ">=12",
     "react": ">=18",
