--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "clean": "npm run clean:dist && npm run clean:coverage",
     "clean:dist": "rimraf ./dist/*",
     "clean:coverage": "rimraf ./coverage/*",
-    "lint": "npm run clean:dist && eslint -c eslint.config.mjs",
+    "lint": "npm run clean && eslint -c eslint.config.mjs",
     "lint:fix": "npm run lint -- --fix",
     "pretest": "npm run clean:dist && npm run typecheck && npm run lint",
     "test": "npm run clean:coverage && jest --maxWorkers=4 --coverage",
@@ -54,9 +54,9 @@
     "@eslint/js": "^9.13.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@stylistic/eslint-plugin": "^2.9.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "@terrestris/eslint-config-typescript": "^9.0.0",
-    "@terrestris/eslint-config-typescript-react": "^3.0.0",
+    "@terrestris/eslint-config-typescript-react": "^5.0.1",
     "@terrestris/ol-util": "^21.0.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
@@ -67,9 +67,9 @@
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-import": "^2.31.0",
     "fs-extra": "^11.2.0",
     "globals": "^15.11.0",
