--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -6,14 +6,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [20.x, 22.x]
+
     steps:
     - name: Checkout sources 🔰
       uses: actions/checkout@v4
 
-    - name: Setup Node.js 20 👷🏻
+    - name: Setup Node.js 🧮 in version ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: ${{ matrix.node-version }}
 
     - name: Cache Node.js modules 💾
       uses: actions/cache@v4
